make video folder

--- a/src/notebooks/bayesian_ab_testing.ipynb
+++ b/src/notebooks/bayesian_ab_testing.ipynb
@@ -136,7 +136,7 @@
     "\n",
     "VIDEO_FOLDER = \"../../video\"\n",
     "if not os.path.exists(VIDEO_FOLDER):\n",
-    "    os.makedirs(IMAGE_FOLDER)"
+    "    os.makedirs(VIDEO_FOLDER)"
    ]
   },
   {
